--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
+  - package-ecosystem: "npm, pip" # See documentation for possible values
     directories: 
           - "/frontend"
           - "/backend" # Location of package manifests
