--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.7.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
