--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ pydantic-core==2.41.1
 numpy==2.3.3
 pandas==2.3.3
 scikit-learn==1.7.2
+scipy>=1.16.2
 lightgbm==4.6.0
 python-multipart==0.0.20
 python-dotenv==1.1.1
